# stm32f103-ota-demo

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  flash.sh  xmake.lua
apps/app/: CMakeLists.txt  STM32F103XX_FLASH.ld  main.c  ota.c  ota.h  stm32f1xx_it.c  xmake.lua
apps/bootloader/: CMakeLists.txt  STM32F103XX_FLASH.ld  boot.c  common.h  main.c  stm32f1xx_it.c  xmake.lua
bsp/: can.c  can.h  usart.c
cmake/: arm-none-eabi.cmake  stm32-firmware.cmake
driver/: CMakeLists.txt
generic/: config.c  config.h  generic.c  log.h  partition.h  stm32f1xx_hal_conf.h
tools/: ota_host.py
